--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
   "name": "payment-sdk",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "A React-based payment SDK for merchant applications with secure iframe tokenization",
+  "private": false,
+  "main": "dist/PaymentSDK.js",
+  "module": "dist/PaymentSDK.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "keywords": [
+    "payment",
+    "sdk",
+    "react",
+    "tokenization",
+    "payment-gateway",
+    "secure-payment"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:sdk": "rimraf dist && npx babel src --out-dir dist --copy-files --ignore '*/.test.js','*/.spec.js' && rimraf dist/DemoApp.js dist/DemoApp.css dist/index.js dist/index.css",
+    "prepare": "npm run build:sdk"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "peerDependencies": {
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19"
+  },
+  "dependencies": {
+    "axios": "^1.13.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.3",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.28.5",
+    "react-scripts": "^5.0.1",
+    "rimraf": "^6.1.2"
   },
   "browserslist": {
     "production": [
