--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "payment-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A React-based payment SDK for merchant applications with secure iframe tokenization",
   "private": false,
   "main": "dist/PaymentSDK.js",
@@ -27,10 +27,10 @@
   },
   "peerDependencies": {
     "react": "^18 || ^19",
-    "react-dom": "^18 || ^19"
+    "react-dom": "^18 || ^19",
+    "axios": "^1.0.0"
   },
   "dependencies": {
-    "axios": "^1.13.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
