--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
     "prepare": "npm run build:sdk"
   },
   "peerDependencies": {
+    "axios": "^1.6.0",
     "react": "^18 || ^19",
-    "react-dom": "^18 || ^19",
-    "axios": "^1.0.0"
-  },
-  "dependencies": {
+    "react-dom": "^18 || ^19"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.3",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.28.5",
+    "axios": "^1.6.0",
     "react-scripts": "^5.0.1",
     "rimraf": "^6.1.2"
   },
